        on fresh installs.
    - pg_createcluster:
      + Adapt cert/key paths to snakeoil
      + Update manpage documentation POD.
  * PgCommon.pm, change_ugid(): Fix the order of $< and $> assignment so that
    we don't trash the saved uid and can switch back later. This allows us to
    make use of this function in the test suite, too.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 22 Feb 2006 17:26:52 +0100

postgresql-common (43) unstable; urgency=low

  * debian/postgresql-common.cron.d: Update documentation for 8.1 and correct
    paths in it. Closes: #351891
  * pg_createcluster: Fix typos in POD. Closes: #351835
  * debian/postgresql-common.dirs: Add /var/lib/postgresql to ensure that the
    postgres user always has an existant home directory. Closes: #351985
  * debian/supported-versions, lsb_debian(): Add 'testing'. Closes: #353754
  * PgCommon.pm, change_ugid():
    - Suppress warning on nonexistant user names.
    - Do not split group list at comma; getgrent already converts commas in
      /etc/groups to spaces, and splitting on commas breaks pam-ldap
      environments. Thanks to Chmouel Boudjnah.
    - Closes: #353674
  * pg_wrapper: Set PGSYSCONFDIR to /etc/postgresql-common if it is unset, to
    provide a sane default for the location of pg_service.conf.
    Closes: #353832
  * pg_dropcluster: Remove /etc/postgresql/<version> and
    /var/lib/postgresql/<version> if empty.
  * t/TestLib.pm: Added check_clean() method to test for empty PostgreSQL
    related directories and processes, and use it in all tests.
  * pg_dropcluster: Remove default log file. This avoids leaving it behind if
    the log file directory was changed in postgresql.conf.

 -- Martin Pitt <mpitt@debian.org>  Tue, 21 Feb 2006 20:59:04 +0100

postgresql-common (42) unstable; urgency=low

  * PgCommon.pm, change_ugid(): Implement initgroups() like behaviour to allow
    running the postmaster in auxiliary groups. This is necessary for e. g.