@@ -17,8 +17,11 @@ postgresql-common (43.1ubuntu1) dapper; urgency=low
   * PgCommon.pm, change_ugid(): Fix the order of $< and $> assignment so that
     we don't trash the saved uid and can switch back later. This allows us to
     make use of this function in the test suite, too.
+  * t/TestLib.pm: Use change_ugid() in exec_as() get auxiliary groups. This
+    makes the test suite work with SSL keys which are only readable by
+    ssl-cert group members.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 22 Feb 2006 17:26:52 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 22 Feb 2006 17:27:34 +0100
 
 postgresql-common (43) unstable; urgency=low
 
